--- a/WpfApp3/MusicPlayer.UIComponents.csproj
+++ b/WpfApp3/MusicPlayer.UIComponents.csproj
@@ -16,41 +16,24 @@
     <None Remove="Assets\icons8-pause-button-50.png" />
     <None Remove="Assets\icons8-refresh-50.png" />
     <None Remove="Assets\icons8-restart-50.png" />
+    <None Remove="Assets\icons8-search-50.png" />
+    <None Remove="Assets\userphoto.png" />
+    <None Remove="Images\Adele_-_21.png" />
     <None Remove="Images\Beat_It.jpg" />
     <None Remove="Images\Image-Alice_Deejay_Better_Off_Alone.jpg" />
     <None Remove="Images\images.jpg" />
     <None Remove="Images\ImagineCover.jpg" />
     <None Remove="Images\Journey_-_Any_Way_You_Want_It_single_cover.jpg" />
+    <None Remove="Images\Led_Zeppelin_-_Led_Zeppelin_III.png" />
+    <None Remove="Images\Michael_Jackson_-_Thriller.png" />
+    <None Remove="Images\SecondHelpingLynyrdSkynyrd.jpg" />
     <None Remove="Images\Skynyrd-Sweet-Home-Alabama.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Images\Beat_It.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\Image-Alice_Deejay_Better_Off_Alone.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\images.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\Journey_-_Any_Way_You_Want_It_single_cover.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\Skynyrd-Sweet-Home-Alabama.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Remove="Images\Who_Needs_Guitars_Anyway_album_cover_by_Alice_DeeJay.jpg" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MusicPlayer.Data\MusicPlayer.Data.csproj" />
     <ProjectReference Include="..\MusicPlayer.Utility\MusicPlayer.Utility.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Images\ImagineCover.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -77,6 +60,27 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\icons8-restart-50.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-search-50.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\userphoto.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Adele_-_21.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Led_Zeppelin_-_Led_Zeppelin_III.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Michael_Jackson_-_Thriller.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\SecondHelpingLynyrdSkynyrd.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Who_Needs_Guitars_Anyway_album_cover_by_Alice_DeeJay.jpg">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
