--- a/WpfApp3/MusicPlayer.UIComponents.csproj
+++ b/WpfApp3/MusicPlayer.UIComponents.csproj
@@ -9,25 +9,39 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\icons8-albums-30.png" />
+    <None Remove="Assets\icons8-audio-wave-30.png" />
+    <None Remove="Assets\icons8-browse-64.png" />
     <None Remove="Assets\icons8-circled-play-button-50.png" />
     <None Remove="Assets\icons8-ellipsis-30.png" />
     <None Remove="Assets\icons8-end-50 %281%29.png" />
     <None Remove="Assets\icons8-end-50.png" />
+    <None Remove="Assets\icons8-heart-50.png" />
+    <None Remove="Assets\icons8-mic-30.png" />
+    <None Remove="Assets\icons8-music-library-30.png" />
     <None Remove="Assets\icons8-pause-button-50.png" />
+    <None Remove="Assets\icons8-playlist-50.png" />
     <None Remove="Assets\icons8-refresh-50.png" />
     <None Remove="Assets\icons8-restart-50.png" />
     <None Remove="Assets\icons8-search-50.png" />
+    <None Remove="Assets\icons8-volume-64.png" />
     <None Remove="Assets\userphoto.png" />
     <None Remove="Images\Adele_-_21.png" />
     <None Remove="Images\Beat_It.jpg" />
+    <None Remove="Images\Dark_Side_of_the_Moon.png" />
+    <None Remove="Images\Funk_Wav_Bounces_1.jpg" />
     <None Remove="Images\Image-Alice_Deejay_Better_Off_Alone.jpg" />
     <None Remove="Images\images.jpg" />
     <None Remove="Images\ImagineCover.jpg" />
     <None Remove="Images\Journey_-_Any_Way_You_Want_It_single_cover.jpg" />
     <None Remove="Images\Led_Zeppelin_-_Led_Zeppelin_III.png" />
+    <None Remove="Images\Led_Zeppelin_-_Mothership.jpg" />
+    <None Remove="Images\Mark_Ronson_-_Uptown_Special_%28Official_Album_Cover%29.png" />
     <None Remove="Images\Michael_Jackson_-_Thriller.png" />
+    <None Remove="Images\Rock_or_Bust.jpg" />
     <None Remove="Images\SecondHelpingLynyrdSkynyrd.jpg" />
     <None Remove="Images\Skynyrd-Sweet-Home-Alabama.jpg" />
+    <None Remove="Images\The_Kids_Are_Coming_by_Tones_and_I.png" />
     <None Remove="Images\Who_Needs_Guitars_Anyway_album_cover_by_Alice_DeeJay.jpg" />
   </ItemGroup>
 
@@ -41,6 +55,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\icons8-albums-30.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-audio-wave-30.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-browse-64.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\icons8-circled-play-button-50.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -53,7 +76,19 @@
     <Resource Include="Assets\icons8-end-50.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\icons8-heart-50.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-mic-30.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-music-library-30.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\icons8-pause-button-50.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\icons8-playlist-50.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\icons8-refresh-50.png">
@@ -65,22 +100,34 @@
     <Resource Include="Assets\icons8-search-50.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\icons8-volume-64.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\userphoto.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\Adele_-_21.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Images\Led_Zeppelin_-_Led_Zeppelin_III.png">
+    <Resource Include="Images\Dark_Side_of_the_Moon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Funk_Wav_Bounces_1.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Led_Zeppelin_-_Mothership.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Mark_Ronson_-_Uptown_Special_(Official_Album_Cover).png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\Michael_Jackson_-_Thriller.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Images\SecondHelpingLynyrdSkynyrd.jpg">
+    <Resource Include="Images\Rock_or_Bust.jpg">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Images\Who_Needs_Guitars_Anyway_album_cover_by_Alice_DeeJay.jpg">
+    <Resource Include="Images\The_Kids_Are_Coming_by_Tones_and_I.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
